[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://HighScore.gd" type="Script" id=2]
[ext_resource path="res://DiloWorld-mLJLv.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.898039, 0.603922, 0.12549, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0.898039, 0.603922, 0.12549, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="HighScore" type="Control"]
margin_right = 1024.0
margin_bottom = 576.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 384.0
margin_top = 448.0
margin_right = 640.0
margin_bottom = 488.0
__meta__ = {
"_edit_group_": true
}

[node name="Back" type="Button" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 20.0
text = "Back"

[node name="Title1" type="HBoxContainer" parent="."]
margin_left = 160.0
margin_top = 64.0
margin_right = 480.0
margin_bottom = 96.0

[node name="Level" type="Label" parent="Title1"]
margin_right = 137.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.917647, 0.956863, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = " Level"
align = 1

[node name="Best Time" type="Label" parent="Title1"]
margin_left = 141.0
margin_right = 320.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.917647, 0.956863, 0.054902, 1 )
custom_fonts/font = SubResource( 2 )
text = " Best Time"
align = 1

[node name="Title2" type="HBoxContainer" parent="."]
margin_left = 544.0
margin_top = 64.0
margin_right = 864.0
margin_bottom = 96.0
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Title2"]
margin_right = 147.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.917647, 0.956863, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level"
align = 1

[node name="Best Time" type="Label" parent="Title2"]
margin_left = 151.0
margin_right = 320.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.917647, 0.956863, 0.054902, 1 )
custom_fonts/font = SubResource( 2 )
text = "Best Time"
align = 1

[node name="LevelContainer1" type="VBoxContainer" parent="."]
margin_left = 208.0
margin_top = 128.0
margin_right = 272.0
margin_bottom = 416.0
custom_constants/separation = 80

[node name="1" type="Label" parent="LevelContainer1"]
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
valign = 1

[node name="2" type="Label" parent="LevelContainer1"]
margin_top = 112.0
margin_right = 64.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1
valign = 1

[node name="3" type="Label" parent="LevelContainer1"]
margin_top = 224.0
margin_right = 64.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1

[node name="LevelContainer2" type="VBoxContainer" parent="."]
margin_left = 592.0
margin_top = 128.0
margin_right = 656.0
margin_bottom = 416.0
custom_constants/separation = 80

[node name="4" type="Label" parent="LevelContainer2"]
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "4"
align = 1
valign = 1

[node name="5" type="Label" parent="LevelContainer2"]
margin_top = 112.0
margin_right = 64.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 3 )
text = "5"
align = 1
valign = 1

[node name="6" type="Label" parent="LevelContainer2"]
margin_top = 224.0
margin_right = 64.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
text = "6"
align = 1
valign = 1

[node name="ScoreContainer1" type="VBoxContainer" parent="."]
margin_left = 320.0
margin_top = 128.0
margin_right = 480.0
margin_bottom = 416.0
custom_constants/separation = 80

[node name="1" type="Label" parent="ScoreContainer1"]
margin_right = 160.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="2" type="Label" parent="ScoreContainer1"]
margin_top = 112.0
margin_right = 160.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="3" type="Label" parent="ScoreContainer1"]
margin_top = 224.0
margin_right = 160.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="ScoreContainer2" type="VBoxContainer" parent="."]
margin_left = 704.0
margin_top = 128.0
margin_right = 864.0
margin_bottom = 416.0
custom_constants/separation = 80

[node name="4" type="Label" parent="ScoreContainer2"]
margin_right = 160.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="5" type="Label" parent="ScoreContainer2"]
margin_top = 112.0
margin_right = 160.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="6" type="Label" parent="ScoreContainer2"]
margin_top = 224.0
margin_right = 160.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Button_pressed"]
